Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									Michkael is of Jamaican and Dominican Ancestry; his maternal family belongs to the Land of Wood and Water while his paternal family comes from The Nature Isle of the Caribbean. Michkael enjoys the art of storytelling whether this is through his works in the arts through trumpet/piano, dance, singing, or even writing/reciting poetry. Michkael is aiming for a PHD in sociology, seeking to answer the question of "Why Black Boys Are Not Reading More?" Through telling the story of Jamaica through its folklore and history. Michkael will be a champion of social advoacy and global change; he will change the world.
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="/images/_MG_9378.JPEG" alt="" /></a>
+								<a href="#" class="image main"><img src="/images/MG_9378.JPEG" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">VIEW MY PROJECTS</a></li>
 								</ul>
@@ -223,4 +223,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
